--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,20 @@
 <html>
 <head>
   <title>Kevin</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
 
-<%= yield %>
+<div class="container-fluid">
+  <div class="col-md-12">
+    <body>
 
-</body>
+    <%= yield %>
+
+    </body>
+  </div>
+
+</div>
+
 </html>
